[package]
name = "bvh"
description = "A fast BVH using SAH"
version = "0.3.0"
authors = [
    "Sven-Hendrik Haase <svenstaro@gmail.com>",
    "Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/svenstaro/bvh"
documentation = "https://docs.rs/crate/bvh"
keywords = ["bvh", "bounding", "volume", "sah", "aabb"]
license = "MIT"

[dependencies]
approx = "0.1.1"
nalgebra = "0.12.3"
rand = "0.4.2"
log = "0.4.1"
rayon = "0.9.0"
faster = "0.4.3"

[dev-dependencies]
quickcheck = "0.6.1"
obj-rs = "0.4"

[profile.release]
lto = true

[profile.bench]
lto = true
